--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,16 @@
     font-size: 20px;
     padding: 0;
     margin: 0;
+    color: white;
 }
-#main {
+.main {
     width: 100%;
     height: 100%;
 }
-#head {
+.head {
     height: 75px;
     width: 100%;
-    background-color: #0055ff;
-    position: fixed;
-    opacity: .7;
+    background-color: #57595d;
 }
 .name {
     float: left;
@@ -21,93 +20,158 @@
 }
 .name h1 {
     font-size: 60px;
+    cursor: default;
 }
 .logo {
     background-image: url(../img/book.png)
 }
-#contact {
+.contact {
     float: right;
     width: auto;
     text-align: right;
     padding-top: 10px;
     margin: 0;
 }
-#contact li {
+.contact li {
     list-style-type: none;
     display: inline;
     cursor: pointer;
 }
-#nav {
+.contact li img:hover {
+    background-color: #393939;
+}
+.nav-parent {
     font: normal 15px Verdana, Arial, sans-serif;
-    width: 150px;
+    width: 50px;
     float: left;
     position: fixed;
     height: 300px;
     text-align: left;
     top: 50%;
     transform: translateY(-50%);
-    background-color: #404040;
-    opacity: .8;
-    border: #222222;
+    background-color: #57595d;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    opacity: 1;
 }
-
-#nav-child {
-    width: 50%;
+.nav-parent h1 {
+    margin: auto;
+    padding-top: 60px;
+    font-size: 30;
+    writing-mode: vertical-rl;
+}
+.nav-parent:hover .nav-child {
+    display: block;
+}
+.nav-child {
+    background-color: #57595d;
+    height: 300px;
     margin-left: auto;
     margin-right: auto;
     position: absolute;
     background-size: contain;
     top: 50%;
     transform: translateY(-50%);
+    display: none;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    opacity: 1;
 }
-#nav li {
-    list-style-type: none;
+.nav-child ul {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 1;
+}
+.nav-child li {
+    padding: 10px;
 }
 
-
-
-
-/*Classes*/
 .navbuttons {
     list-style: none;
     border: none;
-    background-color: #404040;
+    background-color: #57595d;
     font-size: 30;
     cursor: pointer;
-
 }
 .navbuttons:hover {
-    background-color: #898787
+    background-color: #2a2a2a;
 }
-/* Body */
-#bg1 {
-    height: 100vh;
+.navfixed { 
+    height: 75px;
     width: 100%;
-    background-image: url(../img/bg1.png);
+    background-color: #57595d;
+    position: fixed;
+    opacity: .8; 
+    top: 0;
+    z-index: 1;
+}
+.navfixed:hover {
+    opacity: 1;
+}
+
+.bg1 {
+    height: 750px;
+    width: 100%;
+    background-image: url(../img/bg8.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
-#about {
-    background-color: #fff;
-    width: auto;
-    height: 500px;
+.bg1-text {
+    cursor: default;
+    margin-right: auto;
+    margin-left: 400px;
+    text-align: center;
+    width: 50%;
+    height: 150px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 25px;
+    opacity: .9;
 }
-#bg2 {
+.bg1-text h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+}
+.bg1-text p {
+    font-size: 30px;
+}
+.about {
+    float: bottom;
+    background-color: #747d8c;
+    width: auto;
+    height: 300px;
+}
+.about p {
+    margin: auto;
+    text-align: center;
+    width: 500px;
+    color: #fff;
+    font-size: 30px;
+    cursor: default;
+}
+.bg2 {
     height: 100vh;
     width: 100%;
-    background-image: url(../img/bg2.jpg);
+    background-image: url(../img/bg6.jpg);
     background-size: cover; 
     background-attachment: fixed; 
 }
-#history {
-    background-color: #fff;
+.history {
+    background-color: #747d8c;
     width: auto;
     height: 500px;
 }
-#bg3 {
+.bg3 {
     height: 100vh;
     width: 100%;
-    background-image: url(../img/bg3.jpg);
+    background-image: url(../img/bg7.jpg);
     background-size: cover; 
     background-attachment: fixed; 
+}
+.helpful {
+    background-color: #747d8c;
+    width: auto;
+    height: 300px;
 }
